--- a/spring_boot/src/main/resources/application.properties
+++ b/spring_boot/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port=8081
+server.port=8080
+spring.application.name=hello-service
+eureka.client.service-url.defaultZone=http://localhost:1111/eureka
