--- a/spring_boot/pom.xml
+++ b/spring_boot/pom.xml
@@ -2,8 +2,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>spring_boot</artifactId>
-	<name>spring_boot</name>
+	<artifactId>springboot</artifactId>
+	<name>spring_boot_server</name>
 	<description>Demo project for Spring Boot</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -16,7 +16,7 @@
 	
 
 	<properties>
-	<!-- 解决pom第一行报小红X -->
+		<!-- 解决pom第一行报小红X -->
 		<maven-jar-plugin.version>3.0.0</maven-jar-plugin.version>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>Greenwich.SR2</spring-cloud.version>
