--- a/spring_boot/src/main/resources/application.properties
+++ b/spring_boot/src/main/resources/application.properties
@@ -1,3 +1,8 @@
-server.port=8080
+server.port=8083
 spring.application.name=hello-service
+eureka.client.fetch-registry=true
+#Eureka客户端向服务端发送心跳的时间间隔，单位为秒（客户端告诉服务端自己会按照该规则）
+eureka.instance.lease-renewal-interval-in-seconds =1
+#Eureka服务端在收到最后一次心跳之后等待的时间上限，单位为秒，超过则剔除（客户端告诉服务端按照此规则等待自己）
+eureka.instance.lease-expiration-duration-in-seconds =2
 eureka.client.service-url.defaultZone=http://localhost:1111/eureka
