--- a/spring_cloud_eureka/src/main/resources/application.properties
+++ b/spring_cloud_eureka/src/main/resources/application.properties
@@ -1,10 +1,16 @@
 
 server.port=1111
 #表示设置该服务注册中心的hostname
-eureka.instance.hostname=localhost
+eureka.instance.hostname=test1
 #,由于我们目前创建的应用是一个服务注册中心，而不是普通的应用，默认情况下，这个应用会向注册中心（也是它自己）注册它自己，设置为false表示禁止这种默认行为
 eureka.client.register-with-eureka=false
 #表示不去检索其他的服务，因为服务注册中心本身的职责就是维护服务实例，它也不需要去检索其他服务
 eureka.client.fetch-registry=false
-#请求服务的路径
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka/
+#不读取只读的缓存服务清单，因为30秒刷新一次比较慢，读写高速缓存过期策略
+eureka.server.use-read-only-response-cache=false
+#关闭自我保护
+eureka.server.enable-self-preservation=false
+#剔除失效服务间隔
+eureka.server.eviction-interval-timer-in-ms=6000
+eureka.client.service-url.defaultZone=http://test1:1111/eureka/
+
